<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/library_number"
        android:layout_width="75dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/library_number"
        android:textColor="#444444"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/code_number"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:layout_toEndOf="@+id/library_number"
        android:layout_toRightOf="@+id/library_number"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/bar_code"
        android:textColor="#444444"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/book_name"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:layout_toEndOf="@+id/code_number"
        android:layout_toLeftOf="@+id/book_price"
        android:layout_toRightOf="@+id/code_number"
        android:layout_toStartOf="@+id/book_price"
        android:ellipsize="end"
        android:gravity="start|center_vertical"
        android:singleLine="true"
        android:text="@string/book_name"
        android:textColor="#444444"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/book_price"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_centerVertical="true"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_toLeftOf="@+id/book_status"
        android:layout_toStartOf="@+id/book_status"
        android:gravity="end|center_vertical"
        android:singleLine="true"
        android:text="@string/pricing"
        android:textColor="#444444"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/book_attach_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/book_price"
        android:layout_alignRight="@+id/book_price"
        android:layout_below="@+id/book_price"
        android:layout_marginTop="-8dp"
        android:ellipsize="end"
        android:gravity="end|center_vertical"
        android:singleLine="true"
        android:text="@string/premium"
        android:textColor="#ff0000"
        android:textSize="16sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/book_status"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="end|center_vertical"
        android:singleLine="true"
        android:text="@string/text_status"
        android:textColor="#444444"
        android:textSize="16sp" />
</RelativeLayout>