<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/login_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:contentDescription="@null"
            android:src="@mipmap/ic_login_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/library_num_et"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/bg_round_ffffff"
                android:digits="@string/englist_txt"
                android:gravity="center"
                android:hint="@string/library_number"
                android:inputType="textUri|text"
                android:maxLength="5"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#333333"
                android:textColorHint="#cccccc"
                android:textSize="18sp" />


            <EditText
                android:id="@+id/user_name_et"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="26dp"
                android:background="@drawable/bg_round_ffffff"
                android:gravity="center"
                android:hint="@string/user_name"
                android:inputType="textUri|text"
                android:maxLength="20"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#333333"
                android:textColorHint="#cccccc"
                android:textSize="18sp" />


            <EditText
                android:id="@+id/pwd_et"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="26dp"
                android:background="@drawable/bg_round_ffffff"
                android:digits="@string/englist_scanner_input_numbers"
                android:gravity="center"
                android:hint="@string/password"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#333333"
                android:textColorHint="#cccccc"
                android:textSize="18sp" />


            <Button
                android:id="@+id/login_btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="26dp"
                android:background="@drawable/bg_btn_round_8a633d"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/forget_pwd_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="25dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="10dp"
                android:text="@string/forget_pwd"
                android:textColor="#8a623d"
                android:textSize="15sp" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>