<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp">

    <TextView
        android:id="@+id/reader_build_date"
        android:layout_width="78dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:textSize="15.5sp"
        android:maxLines="1"
        android:textColor="#444444"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:gravity="center_horizontal"
        android:text="@string/text_reader_date"/>

    <TextView
        android:id="@+id/reader_name"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:textColor="#444444"
        android:textSize="15.5sp"
        android:gravity="center_horizontal"
        android:layout_toRightOf="@+id/reader_build_date"
        android:layout_toEndOf="@+id/reader_build_date"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:maxLines="1"
        android:text="@string/text_reader_name"/>


    <TextView
        android:id="@+id/reader_idcard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:textColor="#444444"
        android:textSize="15.5sp"
        android:gravity="center_horizontal"
        android:layout_toRightOf="@+id/reader_name"
        android:layout_toEndOf="@+id/reader_name"
        android:layout_toLeftOf="@+id/reader_read_number"
        android:layout_toStartOf="@+id/reader_read_number"
        android:maxLines="1"
        android:text="@string/text_reader_idcard"/>


    <TextView
        android:id="@+id/reader_read_number"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:textSize="15.5sp"
        android:maxLines="1"
        android:gravity="end"
        android:textColor="#444444"
        android:ellipsize="end"
        android:text="@string/text_reader_borrow_number"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="4dp"
        android:layout_marginEnd="4dp"/>

</RelativeLayout>