<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tzpt.cloundlibrary.manager.ui.activity.SetOperatorFirstPswActivity">

    <com.tzpt.cloundlibrary.manager.widget.TitleBarView
        android:id="@+id/common_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f4f4f4"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="26dp"
                android:text="@string/first_login_change_psw"
                android:textColor="#333333"
                android:textSize="18sp" />


            <EditText
                android:id="@+id/new_pwd_et"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_round_stroke_ffffff_cbcbcb"
                android:digits="@string/englist_scanner_input_numbers"
                android:gravity="center"
                android:hint="@string/new_psw"
                android:inputType="textPassword"
                android:maxLength="16"
                android:singleLine="true"
                android:textColor="#333333"
                android:textColorHighlight="#cccccc"
                android:textColorHint="#cccccc"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/sure_new_pwd_et"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="26dp"
                android:background="@drawable/bg_round_stroke_ffffff_cbcbcb"
                android:digits="@string/englist_scanner_input_numbers"
                android:gravity="center"
                android:hint="@string/new_psw"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="16"
                android:singleLine="true"
                android:textColor="#333333"
                android:textColorHighlight="#cccccc"
                android:textColorHint="#cccccc"
                android:textSize="18sp" />


            <Button
                android:id="@+id/confirm_btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="26dp"
                android:background="@drawable/bg_btn_round_8a633d"
                android:gravity="center"
                android:text="@string/confirm"
                android:textColor="#ffffff"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
